LICENSE and README

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,14 @@
 [tool.poetry]
 name = "seqdatasets"
-version = "0.1.0"
+version = "0.1.2"
 description = "Datasets for benchmarking, testing and developing in EUGENe"
 authors = ["adamklie <aklie@ucsd.edu>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-seqdata = "0.1.1"
+seqdata = "^0.1.1"
 wget = "3.2"
-
 
 [build-system]
 requires = ["poetry-core"]
